# BallBalcancingRobotVision

./: Backup 27_08_2025.cpp  BallBalancingRobot data analysis.Rmd  BallBalancingRobot.cpp  CMakeCache.txt  CMakeLists.txt  CameraCalibration.cpp  Kinematics.nb  Makefile  cmake_install.cmake  log.csv  log_actual.csv  out_camera_data.xml
configs/: default.xml
